<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sheet"
        android:enabled="true"
        android:icon="@drawable/human_male_female"
        android:title="@string/character"
        android:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_skills"
        android:enabled="true"
        android:icon="@drawable/ic_build_black_24dp"
        android:title="@string/Skills"
        android:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_equipment"
        android:enabled="true"
        android:icon="@drawable/sword_cross"
        android:title="@string/text_equipment"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_magic"
        android:enabled="true"
        android:icon="@drawable/magic"
        android:title="@string/text_magic"
        app:showAsAction="ifRoom" />
</menu>