<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.ycp.cs482.iorc.Activities.CharacterEditActivity"
    tools:showIn="@layout/activity_character_edit">
    <LinearLayout
        android:id="@+id/char_update_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <ProgressBar
            android:id="@+id/update_char_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/edit_character_stats"
            />

        <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/char_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/character_name_edit"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="">


            <TextView
                style="?android:attr/textAppearanceListItemSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/stat_padding"
                android:text="@string/Str"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_gravity=""
                />

            <EditText
                android:id="@+id/character_abil_str_edit"
                style="?android:attr/textAppearanceListItemSmall"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_column="1"
                android:layout_row="0"
                />

            <TextView
                style="?android:attr/textAppearanceListItemSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/stat_padding"
                android:text="@string/Con"
                android:layout_column="2"
                android:layout_row="0"
                />

            <EditText
                android:id="@+id/character_abil_con_edit"
                style="?android:attr/textAppearanceListItemSmall"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:layout_width="50dp"
                android:inputType="number"
                android:layout_column="3"
                android:layout_row="0"
                />

            <TextView
                style="?android:attr/textAppearanceListItemSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/stat_padding"
                android:text="@string/Dex"
                android:layout_column="0"
                android:layout_row="1"
                />

            <EditText
                android:id="@+id/character_abil_dex_edit"
                style="?android:attr/textAppearanceListItemSmall"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_column="1"
                android:layout_row="1"
                />

            <TextView
                style="?android:attr/textAppearanceListItemSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/stat_padding"
                android:text="@string/Int"
                android:layout_column="2"
                android:layout_row="1"
                />

            <EditText
                android:id="@+id/character_abil_int_edit"
                style="?android:attr/textAppearanceListItemSmall"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:inputType="number"
                android:layout_column="3"
                android:layout_row="1"
                />

            <TextView
                style="?android:attr/textAppearanceListItemSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/stat_padding"
                android:text="@string/Wis"
                android:layout_column="0"
                android:layout_row="2"
                />

            <EditText
                android:id="@+id/character_abil_wis_edit"
                style="?android:attr/textAppearanceListItemSmall"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_column="1"
                android:layout_row="2"
                />

            <TextView
                style="?android:attr/textAppearanceListItemSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/stat_padding"
                android:text="@string/Cha"
                android:layout_column="2"
                android:layout_row="2"
                />

            <EditText
                android:id="@+id/character_abil_cha_edit"
                style="?android:attr/textAppearanceListItemSmall"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:inputType="number"
                android:layout_column="3"
                android:layout_row="2"
                />

        </GridLayout>
        

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
